💚 (tests) Use actual exported variable

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -87,7 +87,7 @@ jobs:
           CHANNEL=$(cat /proc/sys/kernel/random/uuid)
           firebase hosting:channel:deploy $CHANNEL
           DEPLOY=$(firebase hosting:channel:list --token $FIREBASE_TOKEN --json | jq -r --arg CHANNEL "$CHANNEL" '.result.channels[] | select(.name | contains($CHANNEL))')
-          echo "::set-output name=url::$(echo DEPLOY | jq -r '.url')"
+          echo "::set-output name=url::$(echo $DEPLOY | jq -r '.url')"
           echo "::set-output name=sha::$GITHUB_SHA"
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
