💚 (code) Don't fail CI if Lighthouse fails
If the Lighthouse task fails, CI should still pass

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -62,6 +62,7 @@ jobs:
   lighthouse:
     needs: build-test
     runs-on: ubuntu-latest
+    continue-on-error: true
     steps:
       - name: Checkout
         uses: actions/checkout@v2
