🆕 (general) Checking translations for _data folder
Translations for the _data folder

--- a/pages/es/_data/nav.yml
+++ b/pages/es/_data/nav.yml
@@ -18,9 +18,9 @@
   sections:
     - title: Linux (Beta)
       url: linux
-    - title: Configuración para Android
+    - title: Entorno para Android
       url: android-environment
-    - title: Configuración para Web
+    - title: Entorno para Web
       url: web-environment
     - title: Productividad
       url: productivity
