--- a/pages/es/_data/news.yml
+++ b/pages/es/_data/news.yml
@@ -6,6 +6,6 @@ featured:
   modifiers:
     custom: landing--news-grey-overlay
 stories:
-  title: Vea cómo las marcas están abriendo nuevas oportunidades con Chrome OS
+  title: Vea cómo distintas marcas están abriendo nuevas oportunidades con Chrome OS
   modifiers:
     variant: icon
