--- a/pages/es/_data/home.yml
+++ b/pages/es/_data/home.yml
@@ -2,10 +2,10 @@
 hero:
   heading:
     - Su aplicación + Chrome OS.
-    - Mire las posibilidades
+    - Mira las posibilidades
   cta:
     text: Comience a crear
-    url: "#home__subnav"
+    url: '#home__subnav'
   img:
     src: '/images/landings/home/hero.png'
     alt: 'Se muestran Chromebook, tablet,  teléfono celular, teléfono plegable, lápiz
@@ -17,7 +17,7 @@ results:
   content:
     heading:
       - Más dispositivos
-      - Nuevas audiencias.
+      - Nuevas audiencias
       - Resultados reales
     desc: Ofrezca experiencias enriquecedoras y atractivas a más personas adaptando
       sus aplicaciones Android, Google Play y Web para Chromebook. Con algunos cambios
@@ -33,8 +33,8 @@ results:
     icon: trending-up
   footnote: 1
   cta:
-    text: Get started on Chrome OS
-    url: '/en/android'
+    text: Empieza con Chrome OS
+    url: '/es/android'
 onAndWith:
   desc: Construya para Chrome OS, usando Chrome OS
   cards:
@@ -45,8 +45,8 @@ onAndWith:
           IDES y herramientas de desarrollo de clase mundial. Simplemente configure
           Linux en Chrome OS para comenzar a construir.
       cta:
-        url: '/en/linux'
-        text: Inicie con Linux
+        url: '/es/linux'
+        text: Empieza con Linux
       modifiers:
         offset: true
       images:
@@ -57,8 +57,8 @@ onAndWith:
         - src: '/images/landings/home/terminal.png'
           alt: La aplicación Terminal para Linux en Chrome OS.
       image:
-        alt: A Chromebook showing a close up of Android Studio’s interface and a Linux
-          command module open.
+        alt: Una Chromebook que muestra un primer plano de la interfaz de Android Studio
+          y la línea de comando de Linux abierto.
         src: '/images/landings/home/laptop-linux.png'
     - content:
         title: Catalice su último proyecto con recursos de diseño para Chrome OS
@@ -67,8 +67,8 @@ onAndWith:
           experiencia del usuario, el diseño visual, los componentes de la interfaz
           de usuario, la navegación, las fuentes y más.
       cta:
-        url: '/en/android/design'
-        text: Mire los recursos de diseño
+        url: '/es/android/design'
+        text: Mira los recursos de diseño
       modifiers:
         offset: true
       images:
@@ -82,9 +82,9 @@ onAndWith:
             en azul y amarillo antes de adaptarse a una aplicación de pantalla grande
             (la imagen anterior).
       image:
-        alt: Show an app design that works for mobile (as shown in a phone) as well
-          as on a desktop screen. The design shows similar elements including blocks
-          of color in the Google spectrum (blue, yellow, green, and red).
+        alt: Muestra un diseño de aplicación que funcione para dispositivos móviles (como se muestra en un teléfono) también
+          como en una pantalla de escritorio. El diseño muestra elementos similares, incluidos bloques.
+          de color en el espectro de Google (azul, amarillo, verde y rojo).
         src: '/images/landings/home/laptop-design-guidelines.png'
 posts:
   title: Lo último sobre Chrome OS
@@ -112,7 +112,7 @@ chromebook:
     url: https://www.google.com/chromebook/
     text: Obtenga información sobre Chromebook
 community:
-  title: Noticias y recursos para desarrolladores para ponerlo en funcionamiento
+  title: Noticias y recursos para desarrolladores para que pueda empezar a trabajar
   modifiers:
     variant: community
 footnotes:
