🔮 (tests) Output results of deploy

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -85,7 +85,8 @@ jobs:
         id: deploy
         run: |
           CHANNEL=$(cat /proc/sys/kernel/random/uuid)
-          firebase hosting:channel:deploy $CHANNEL
+          DEPLOYOUTPUT=$(firebase hosting:channel:deploy $CHANNEL --json)
+          echo $DEPLOYOUTPUT;
           DEPLOY=$(firebase hosting:channel:list --token $FIREBASE_TOKEN --json | jq -r --arg CHANNEL "$CHANNEL" '.result.channels[] | select(.name | contains($CHANNEL))')
           echo "::set-output name=url::$(echo $DEPLOY | jq -r '.url')"
           echo "::set-output name=sha::$GITHUB_SHA"
