🔮 (ux) Redirect to locale-specific 404
Experiment because I'm truly not sure how this will all work together. Need to test with a preview
build

--- a/config/default.yml
+++ b/config/default.yml
@@ -29,6 +29,8 @@ serviceWorker:
     - images/icons/sprite.svg
     - en/index.html
     - index.html
+    - 404/index.html
+    - '**/404/index.html'
 
 # Sass Config
 sass:
