--- a/pages/es/_data/nav.yml
+++ b/pages/es/_data/nav.yml
@@ -1,5 +1,5 @@
 - title: Apps & Juegos
-  desc: Encuentre recursos para crear y optimizar su aplicación de Android, web, juegos y más.
+  desc: Descubra recursos para comenzar a crear sus aplicaciones de Android, aplicaciones web y juegos para Chrome OS.
   icon: game-controller
   sections:
     - title: Adaptar Android
@@ -9,11 +9,12 @@
     - title: Juegos
       url: games
 - title: Publicar
+  desc: Obtén información sobre cómo publicar tus aplicaciones en Google Play Store e involucra a millones de usuarios en Chromebooks.
   url: publish
   icon: game-controller
   alt: publish
 - title: Desarrollo
-  desc: Usa Chrome OS para crear Apps & Juegos
+  desc: Utilice Chrome OS para desarrollar aplicaciones en un entorno rápido, seguro y sin complicaciones.
   icon: wrench
   sections:
     - title: Linux (Beta)
