📝 (general) Update for package.json
Update contributors in package.json

--- a/package.json
+++ b/package.json
@@ -1,10 +1,34 @@
 {
   "name": "chromeos.dev",
   "version": "1.0.0",
-  "description": "My awesome site, built on Chrome OS's static site scaffold",
+  "description": "Hello Chrome OS developers, this is your home",
   "main": "src/js/main.js",
   "contributors": [
-    "Sam Richard <snugug@google.com> (https://snugug.com)"
+    "Adriana Jara",
+    "Alexander Nohe",
+    "Emilie Roberts",
+    "Iein Valdez",
+    "Joyce Toh",
+    "Kenneth Ford",
+    "Matt Monasch",
+    "Natalia Gvak",
+    "Patrick Fuentes",
+    "Sam Richard",
+    "Vivek Mistry",
+    "Alex Cortes",
+    "Beatriz Villalba",
+    "Christian Gutierrez",
+    "Giancarlo Orsi",
+    "Ivan Guevara",
+    "Jack Douglas",
+    "Javier Vargas",
+    "Jeanne Storck",
+    "Juan Sebastian Reina",
+    "Julian Mahecha",
+    "Juliana Lopera",
+    "Ricardo Uribe",
+    "Shanon Stull",
+    "Tu Vu"
   ],
   "license": "Apache-2.0",
   "scripts": {
