💚 (tests) Point to right file

--- a/.github/actions/uuid/action.yml
+++ b/.github/actions/uuid/action.yml
@@ -2,4 +2,4 @@ name: Deploy ID
 description: Determine if a deploy ID already exists, or generates a new one
 runs:
   using: node12
-  main: message.js
+  main: uuid.js
