--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -81,6 +81,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install jq
           npm --prefix .github/actions/message install
+          npm --prefix .github/actions/channel install
       - name: Find Channel ID
         id: id
         uses: ./.github/actions/channel
