🐛 (general) Fix typo
"hasle" -> "hassle"

--- a/pages/en/_data/nav.yml
+++ b/pages/en/_data/nav.yml
@@ -14,7 +14,7 @@
   icon: publish
   alt: publish
 - title: Develop
-  desc: Use Chrome OS to develop apps in a fast, secure, and hasle-free environment.
+  desc: Use Chrome OS to develop apps in a fast, secure, and hassle-free environment.
   icon: wrench
   sections:
     - title: Linux (Beta)
