🐎 (code) Don't add hashes to JS chunks during dev
Hashing slows down compiling and produces a very large number of files, making it harder and harder
to build the site. This will only produce hashes (which we want for cache busting) in production
builds

--- a/config/default.yml
+++ b/config/default.yml
@@ -17,6 +17,7 @@ javascript:
     js/worklets/circles: js/worklets/circles.js
   iife:
     js/search-worker.js: js/search-worker
+  chunkFileNames: '[name].js'
 
 # Service Worker Config
 serviceWorker:
