🆕 (web) Create dynamic PWA checklist
Takes the content from Powerful PWAs and transforms it into a dynamic checklist for users

--- a/pages/en/_data/microcopy.yml
+++ b/pages/en/_data/microcopy.yml
@@ -5,6 +5,10 @@ posted: Posted by ((t))
 datePosted: Date posted
 more: Read more
 recommended: Recommended
+actions:
+  add: Add
+  remove: Remove
+  reset: Reset
 skip:
   content: Skip to content
   toc: Skip table of contents
