--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
     "test": "nyc ava",
     "vrt:approve": "node vrt.js approve",
     "vrt:reference": "node vrt.js reference",
-    "vrt": "node vrt.js test"
+    "vrt": "node vrt.js test",
+    "vite": "vite"
   },
   "nyc": {
     "include": [
@@ -88,20 +89,20 @@
     }
   },
   "devDependencies": {
-    "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.1",
-    "@commitlint/cli": "^8.3.4",
+    "@11ty/eleventy-plugin-syntaxhighlight": "^3.1.3",
+    "@commitlint/cli": "^8.3.6",
     "@rollup/plugin-commonjs": "^11.1.0",
-    "ajv": "^6.12.2",
+    "ajv": "^6.12.6",
     "ajv-merge-patch": "^4.1.0",
     "ava": "^3.15.0",
-    "backstopjs": "^5.0.1",
+    "backstopjs": "^5.4.4",
     "breakpoint-sass": "^2.7.1",
     "cheerio": "^1.0.0-rc.10",
     "chromeos-dev-markdown": "^1.0.0",
     "cli-spinner": "^0.2.10",
     "commitizen": "^4.2.4",
     "config": "^3.3.6",
-    "cross-env": "^7.0.2",
+    "cross-env": "^7.0.3",
     "del-cli": "^2.0.0",
     "eleventy-plugin-i18n-helpers": "0.0.2",
     "eleventy-plugin-safe-external-links": "^0.1.5",
@@ -110,28 +111,26 @@
     "eslint": "^6.5.1",
     "eslint-config-developit": "^1.2.0",
     "eslint-config-google": "^0.14.0",
-    "eslint-config-prettier": "^6.11.0",
+    "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-ava": "^8.0.0",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-prettier": "^3.4.1",
     "eslint-plugin-spellcheck": "0.0.17",
     "esm": "^3.2.25",
     "express": "^4.17.1",
     "front-matter": "^3.2.1",
     "fs-extra": "^8.1.0",
     "fuse.js": "^3.4.6",
-    "glob": "^7.1.6",
-    "gulp": "^4.0.2",
-    "gulp-if": "^3.0.0",
-    "gulp-sass-lint": "^1.4.0",
+    "glob": "^7.2.0",
     "husky": "^3.0.7",
-    "inquirer-autocomplete-prompt": "^1.0.1",
-    "js-yaml": "^3.14.0",
+    "inquirer-autocomplete-prompt": "^1.4.0",
+    "js-yaml": "^3.14.1",
     "lodash.clonedeep": "^4.5.0",
     "lodash.get": "^4.4.2",
     "lodash.kebabcase": "^4.1.1",
     "npm-run-all": "^4.1.5",
     "nyc": "^14.1.1",
+    "posthtml-external-link": "^0.1.2",
     "prettier": "^1.18.2",
     "remark": "^12.0.0",
     "remark-cli": "^8.0.0",
@@ -145,41 +144,40 @@
     "serve": "^11.3.2",
     "serve-handler": "^6.1.3",
     "sinon": "^7.5.0",
-    "string-strip-html": "^4.5.0",
-    "through2": "^4.0.2",
+    "string-strip-html": "^4.5.1",
     "unified-lint-rule": "^1.0.5",
-    "unist-util-find": "^1.0.1",
+    "unist-util-find": "^1.0.2",
     "unist-util-parents": "^1.0.3",
     "unist-util-visit": "^2.0.2",
-    "vite": "^2.6.14",
+    "vite": "^2.7.0-beta.8",
     "vite-plugin-eleventy": "0.0.9",
-    "yaml-unist-parser": "^1.2.1"
+    "vite-plugin-img": "^0.2.0",
+    "vite-plugin-posthtml": "0.0.3",
+    "yaml-unist-parser": "^1.3.1"
   },
   "dependencies": {
     "@11ty/eleventy": "^0.12.1",
-    "comlink": "^4.3.0",
+    "comlink": "^4.3.1",
     "css-paint-polyfill": "^2.0.0",
     "dynamic-import-polyfill": "^0.1.1",
-    "eleventy-plugin-nesting-toc": "^1.1.0",
-    "full-icu": "^1.3.0",
-    "gulp-multi-dest": "^1.3.7",
-    "gulp-tap": "^2.0.0",
+    "eleventy-plugin-nesting-toc": "^1.3.0",
+    "full-icu": "^1.4.0",
     "i18n-iso-countries": "^5.5.0",
-    "iso-639-1": "^2.1.3",
-    "lottie-web": "^5.7.0",
-    "lunr": "^2.3.8",
-    "patch-package": "^6.2.2",
+    "iso-639-1": "^2.1.10",
+    "lottie-web": "^5.8.1",
+    "lunr": "^2.3.9",
+    "patch-package": "^6.4.7",
     "resize-observer-polyfill": "^1.5.1",
     "service-worker-i18n-redirect": "^1.0.0",
     "service-worker-includes": "^1.0.1",
     "string": "^3.3.3",
-    "workbox-broadcast-update": "^5.1.3",
-    "workbox-cacheable-response": "^5.1.3",
-    "workbox-expiration": "^5.1.3",
-    "workbox-google-analytics": "^5.1.3",
-    "workbox-precaching": "^5.1.3",
-    "workbox-routing": "^5.1.3",
-    "workbox-strategies": "^5.1.3"
+    "workbox-broadcast-update": "^5.1.4",
+    "workbox-cacheable-response": "^5.1.4",
+    "workbox-expiration": "^5.1.4",
+    "workbox-google-analytics": "^5.1.4",
+    "workbox-precaching": "^5.1.4",
+    "workbox-routing": "^5.1.4",
+    "workbox-strategies": "^5.1.4"
   },
   "private": true,
   "volta": {
