--- a/package.json
+++ b/package.json
@@ -105,7 +105,6 @@
     "cross-env": "^7.0.3",
     "del-cli": "^2.0.0",
     "eleventy-plugin-i18n-helpers": "0.0.2",
-    "eleventy-plugin-safe-external-links": "^0.1.5",
     "emoji-commit-helpers": "^0.1.1",
     "emoji-regex": "^8.0.0",
     "eslint": "^6.5.1",
@@ -131,6 +130,7 @@
     "npm-run-all": "^4.1.5",
     "nyc": "^14.1.1",
     "posthtml-external-link": "^0.1.2",
+    "posthtml-match-helper": "^1.0.1",
     "prettier": "^1.18.2",
     "remark": "^12.0.0",
     "remark-cli": "^8.0.0",
