--- a/package.json
+++ b/package.json
@@ -34,40 +34,26 @@
   "scripts": {
     "ava:watch": "ava -w",
     "ava": "ava",
-    "build:static": "gulp build",
-    "build": "cross-env NODE_ENV=production NODE_ICU_DATA=node_modules/full-icu run-p js static",
-    "compile:optimize": "gulp html:optimize",
-    "compile:test": "run-s 'compile -- --dryrun --quiet'",
-    "compile:watch": "run-s 'compile -- --watch'",
-    "compile": "cross-env NODE_ICU_DATA=node_modules/full-icu eleventy --quiet",
-    "eleventy": "eleventy",
-    "dev": "cross-env NODE_ICU_DATA=node_modules/full-icu run-p *:watch",
-    "gulp": "gulp",
-    "js:lint": "eslint functions src lib gulpfile.js rollup.config.js rollup.sw.js",
-    "js:sw": "rollup -c rollup.sw.js",
-    "js:watch": "run-p 'js -- -w' 'js:sw -- -w'",
-    "js": "rollup -c",
-    "lint": "cross-env NODE_ENV=production run-p *:lint sass",
-    "md:lint": "remark 'pages/*/!(style-guide)/**/*.md' -q -f",
+    "build": "cross-env NODE_ENV=production run-p *:build",
+    "dev": "run-p *:watch",
+    "lint": "cross-env NODE_ENV=production run-p *:lint",
+    "md:lint": "remark 'site/*/!(style-guide)/**/*.md' -q -f",
+    "js:lint": "eslint functions site lib vite.config.js ava.config.cjs",
     "patch": "patch-package",
-    "postbuild": "cross-env NODE_ENV=production run-p compile:optimize js:sw",
     "postinstall": "patch-package",
     "prebuild": "del public",
-    "prestart": "del public",
     "pretest": "run-s lint",
-    "prettier:lint": "prettier -c './**/*.{html,md,js,json}'",
     "prettier": "prettier --write './**/*.{html,md,js,json}'",
-    "sass": "gulp sass",
-    "serve:public": "serve -l 5060",
-    "serve:vrt": "serve -l 5566 .backstop",
+    "prettier:lint": "prettier -c './**/*.{html,md,js,json}'",
     "start": "run-s dev",
-    "static": "run-p compile build:static",
-    "test:lint": "eslint tests",
     "test": "nyc ava",
+    "test:lint": "eslint tests",
+    "vrt:serve": "serve -l 5566 .backstop",
     "vrt:approve": "node vrt.js approve",
     "vrt:reference": "node vrt.js reference",
     "vrt": "node vrt.js test",
-    "vite": "vite"
+    "vite:watch": "vite",
+    "vite:build": "vite build"
   },
   "nyc": {
     "include": [
@@ -78,7 +64,6 @@
   },
   "husky": {
     "hooks": {
-      "pre-push": "run-s lint",
       "prepare-commit-msg": "exec < /dev/tty && git-cz --hook || true",
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
@@ -89,97 +74,92 @@
     }
   },
   "devDependencies": {
+    "@11ty/eleventy": "^0.12",
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.1.3",
-    "@commitlint/cli": "^8.3.6",
-    "@rollup/plugin-commonjs": "^11.1.0",
-    "ajv": "^6.12.6",
-    "ajv-merge-patch": "^4.1.0",
-    "ava": "^3.15.0",
-    "backstopjs": "^5.4.4",
+    "@commitlint/cli": "^15.0",
+    "ajv": "^6.12",
+    "ajv-merge-patch": "^4.1",
+    "ava": "^3.15",
+    "backstopjs": "^5.4",
     "breakpoint-sass": "^2.7.1",
-    "cheerio": "^1.0.0-rc.10",
     "chromeos-dev-markdown": "^1.0.0",
-    "cli-spinner": "^0.2.10",
-    "commitizen": "^4.2.4",
-    "config": "^3.3.6",
-    "cross-env": "^7.0.3",
-    "del-cli": "^2.0.0",
+    "commitizen": "^4.2",
+    "config": "^3.3",
+    "cross-env": "^7.0",
+    "del-cli": "^4.0",
     "eleventy-plugin-i18n-helpers": "0.0.2",
-    "emoji-commit-helpers": "^0.1.1",
-    "emoji-regex": "^8.0.0",
-    "eslint": "^6.5.1",
-    "eslint-config-developit": "^1.2.0",
-    "eslint-config-google": "^0.14.0",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-ava": "^8.0.0",
-    "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-prettier": "^3.4.1",
-    "eslint-plugin-spellcheck": "0.0.17",
-    "esm": "^3.2.25",
-    "express": "^4.17.1",
-    "front-matter": "^3.2.1",
-    "fs-extra": "^8.1.0",
-    "fuse.js": "^3.4.6",
-    "glob": "^7.2.0",
-    "husky": "^3.0.7",
-    "inquirer-autocomplete-prompt": "^1.4.0",
-    "js-yaml": "^3.14.1",
-    "lodash.clonedeep": "^4.5.0",
-    "lodash.get": "^4.4.2",
-    "lodash.kebabcase": "^4.1.1",
-    "npm-run-all": "^4.1.5",
-    "nyc": "^14.1.1",
-    "posthtml-external-link": "^0.1.2",
-    "posthtml-match-helper": "^1.0.1",
-    "prettier": "^1.18.2",
-    "remark": "^12.0.0",
-    "remark-cli": "^8.0.0",
-    "remark-frontmatter": "^2.0.0",
-    "remark-lint": "^7.0.0",
-    "remark-lint-prohibited-strings": "^1.5.2",
-    "replaceall": "^0.1.6",
-    "rollup": "^1.31.1",
-    "sass": "^1.43.4",
+    "eleventy-plugin-nesting-toc": "^1.3",
+    "emoji-commit-helpers": "^0.1",
+    "emoji-regex": "^8.0",
+    "eslint": "^8.4",
+    "eslint-config-developit": "^1.2",
+    "eslint-config-google": "^0.14",
+    "eslint-config-prettier": "^6.15",
+    "eslint-plugin-ava": "^8.0",
+    "eslint-plugin-import": "^2.25",
+    "eslint-plugin-prettier": "^3.4",
+    "eslint-plugin-spellcheck": "^0.0",
+    "esm": "^3.2",
+    "express": "^4.17",
+    "front-matter": "^3.2",
+    "fs-extra": "^8.1",
+    "fuse.js": "^3.4",
+    "glob": "^7.2",
+    "husky": "^3.0",
+    "inquirer-autocomplete-prompt": "^1.4",
+    "js-yaml": "^3.14",
+    "lodash.clonedeep": "^4.5",
+    "lodash.get": "^4.4",
+    "lodash.kebabcase": "^4.1",
+    "npm-run-all": "^4.1",
+    "nyc": "^14.1",
+    "patch-package": "^6.4",
+    "posthtml-external-link": "^0.1",
+    "posthtml-match-helper": "^1.0",
+    "prettier": "^1.18",
+    "remark": "^14.0",
+    "remark-cli": "^8.0",
+    "remark-frontmatter": "^2.0",
+    "remark-lint": "^7.0",
+    "remark-lint-prohibited-strings": "^1.5",
+    "replaceall": "^0.1",
+    "sanitize-html": "^2.6.1",
+    "sass": "^1.43",
     "sass-toolkit": "^2.10.2",
-    "serve": "^11.3.2",
-    "serve-handler": "^6.1.3",
-    "sinon": "^7.5.0",
-    "string-strip-html": "^4.5.1",
-    "unified-lint-rule": "^1.0.5",
-    "unist-util-find": "^1.0.2",
-    "unist-util-parents": "^1.0.3",
-    "unist-util-visit": "^2.0.2",
-    "vite": "^2.7.0-beta.8",
+    "serve": "^11.3",
+    "serve-handler": "^6.1",
+    "sinon": "^7.5",
+    "string-strip-html": "^4.5",
+    "unified-lint-rule": "^1.0",
+    "unist-util-find": "^1.0",
+    "unist-util-parents": "^1.0",
+    "unist-util-visit": "^2.0",
+    "vite": "^2.7",
     "vite-plugin-eleventy": "0.0.9",
     "vite-plugin-posthtml": "0.0.3",
-    "yaml-unist-parser": "^1.3.1"
+    "yaml-unist-parser": "^1.3"
   },
   "dependencies": {
-    "@11ty/eleventy": "^0.12.1",
-    "comlink": "^4.3.1",
-    "css-paint-polyfill": "^2.0.0",
-    "dynamic-import-polyfill": "^0.1.1",
-    "eleventy-plugin-nesting-toc": "^1.3.0",
-    "full-icu": "^1.4.0",
-    "i18n-iso-countries": "^5.5.0",
-    "iso-639-1": "^2.1.10",
-    "lottie-web": "^5.8.1",
-    "lunr": "^2.3.9",
-    "patch-package": "^6.4.7",
-    "resize-observer-polyfill": "^1.5.1",
+    "comlink": "^4.3",
+    "css-paint-polyfill": "^3.0",
+    "dynamic-import-polyfill": "^0.1",
+    "i18n-iso-countries": "^5.5",
+    "iso-639-1": "^2.1",
+    "lottie-web": "^5.8",
+    "lunr": "^2.3",
+    "resize-observer-polyfill": "^1.5",
     "service-worker-i18n-redirect": "^1.0.0",
     "service-worker-includes": "^1.0.1",
-    "string": "^3.3.3",
-    "workbox-broadcast-update": "^5.1.4",
-    "workbox-cacheable-response": "^5.1.4",
-    "workbox-expiration": "^5.1.4",
-    "workbox-google-analytics": "^5.1.4",
-    "workbox-precaching": "^5.1.4",
-    "workbox-routing": "^5.1.4",
-    "workbox-strategies": "^5.1.4"
+    "workbox-broadcast-update": "^5.1",
+    "workbox-cacheable-response": "^5.1",
+    "workbox-expiration": "^5.1",
+    "workbox-google-analytics": "^5.1",
+    "workbox-precaching": "^5.1",
+    "workbox-routing": "^5.1",
+    "workbox-strategies": "^5.1"
   },
   "private": true,
   "volta": {
-    "node": "14.18.1"
+    "node": "16.13.1"
   }
 }
