🔧 (code) Make Firebase functions run with site
Closes #150

--- a/package.json
+++ b/package.json
@@ -32,29 +32,30 @@
   ],
   "license": "Apache-2.0",
   "scripts": {
-    "ava:watch": "ava -w",
     "ava": "ava",
     "build": "cross-env NODE_ENV=production run-p *:build",
     "dev": "run-p *:watch",
+    "firebase:watch": "firebase serve --only functions --port=5010",
+    "firebase": "firebase",
+    "js:lint": "eslint functions site lib vite.config.js ava.config.cjs",
     "lint": "cross-env NODE_ENV=production run-p *:lint",
     "md:lint": "remark 'site/*/!(style-guide)/**/*.md' -q -f",
-    "js:lint": "eslint functions site lib vite.config.js ava.config.cjs",
     "patch": "patch-package",
     "postinstall": "patch-package",
     "prebuild": "del public",
     "pretest": "run-s lint",
-    "prettier": "prettier --write './**/*.{html,md,js,json}'",
     "prettier:lint": "prettier -c './**/*.{html,md,js,json}'",
+    "prettier": "prettier --write './**/*.{html,md,js,json}'",
     "start": "run-s dev",
-    "test": "nyc ava",
     "test:lint": "eslint tests",
-    "vrt:serve": "serve -l 5566 .backstop",
+    "test": "nyc ava",
+    "vite:build": "vite build",
+    "vite:watch": "vite",
+    "vite": "vite",
     "vrt:approve": "node vrt.js approve",
     "vrt:reference": "node vrt.js reference",
-    "vrt": "node vrt.js test",
-    "vite": "vite",
-    "vite:watch": "vite",
-    "vite:build": "vite build"
+    "vrt:serve": "serve -l 5566 .backstop",
+    "vrt": "node vrt.js test"
   },
   "nyc": {
     "include": [
@@ -75,11 +76,11 @@
     }
   },
   "devDependencies": {
-    "@11ty/eleventy": "^0.12",
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.1.3",
+    "@11ty/eleventy": "^0.12",
     "@commitlint/cli": "^15.0",
-    "ajv": "^6.12",
     "ajv-merge-patch": "^4.1",
+    "ajv": "^6.12",
     "ava": "^3.15",
     "backstopjs": "^5.4",
     "breakpoint-sass": "^2.7.1",
@@ -92,7 +93,6 @@
     "eleventy-plugin-nesting-toc": "^1.3",
     "emoji-commit-helpers": "^0.1",
     "emoji-regex": "^8.0",
-    "eslint": "^8.4",
     "eslint-config-developit": "^1.2",
     "eslint-config-google": "^0.14",
     "eslint-config-prettier": "^6.15",
@@ -100,8 +100,10 @@
     "eslint-plugin-import": "^2.25",
     "eslint-plugin-prettier": "^3.4",
     "eslint-plugin-spellcheck": "^0.0",
+    "eslint": "^8.4",
     "esm": "^3.2",
     "express": "^4.17",
+    "firebase-tools": "^9.23.1",
     "front-matter": "^3.2",
     "fs-extra": "^8.1",
     "fuse.js": "^3.4",
@@ -118,23 +120,23 @@
     "posthtml-external-link": "^0.1",
     "posthtml-match-helper": "^1.0",
     "prettier": "^1.18",
-    "remark": "^14.0",
     "remark-cli": "^8.0",
     "remark-frontmatter": "^2.0",
-    "remark-lint": "^7.0",
     "remark-lint-prohibited-strings": "^1.5",
+    "remark-lint": "^7.0",
+    "remark": "^14.0",
     "replaceall": "^0.1",
     "sanitize-html": "^2.6.1",
-    "sass": "^1.43",
     "sass-toolkit": "^2.10.2",
+    "sass": "^1.43",
     "sinon": "^7.5",
     "unified-lint-rule": "^1.0",
     "unist-util-find": "^1.0",
     "unist-util-parents": "^1.0",
     "unist-util-visit": "^2.0",
-    "vite": "^2.7",
     "vite-plugin-eleventy": "0.0.9",
     "vite-plugin-posthtml": "0.0.3",
+    "vite": "^2.7",
     "yaml-unist-parser": "^1.3"
   },
   "dependencies": {
@@ -148,6 +150,7 @@
     "resize-observer-polyfill": "^1.5",
     "service-worker-i18n-redirect": "^1.0.0",
     "service-worker-includes": "^1.0.1",
+    "vite-plugin-pwa": "^0.11.11",
     "workbox-broadcast-update": "^5.1",
     "workbox-cacheable-response": "^5.1",
     "workbox-expiration": "^5.1",
