--- a/site/en/_data/home.yml
+++ b/site/en/_data/home.yml
@@ -17,7 +17,7 @@ results:
       - Real results.
     desc: Deliver rich, engaging experiences to more people by adapting your Android and web apps for Chromebooks. With a few changes to your existing app, you can reach new audiences on different formats and devices — anytime, anywhere.
   img:
-    src: gs://home/intro
+    src: ix://home/intro.1500.png
     alt: Birds eye view of a wooden desk with a Chromebook and Pixel phone. Two people sit across the table from each other, collaborating.
   stats:
     title: YoY Chromebook unit sales growth
@@ -69,7 +69,7 @@ subnav:
     variant: subnav
 chromebook:
   image:
-    src: gs://home/chromebooks-device
+    src: ix://home/chromebooks-device.1500.png
     alt: An image displaying three Chromebooks. One Samsung Chromebook is folded down. Another Acer Chromebook is folded back as a tablet. The last is open for standard laptop use.
   content:
     title: Get to know Chromebook
