Move back to Node 14
Node 16 not supported in Firebase Functions yet, so need to change overall working version

--- a/package.json
+++ b/package.json
@@ -66,11 +66,11 @@
     "all": true
   },
   "devDependencies": {
-    "@11ty/eleventy-plugin-syntaxhighlight": "^3.1.3",
     "@11ty/eleventy": "^0.12",
+    "@11ty/eleventy-plugin-syntaxhighlight": "^3.1.3",
     "@commitlint/cli": "^15.0",
-    "ajv-merge-patch": "^4.1",
     "ajv": "^6.12",
+    "ajv-merge-patch": "^4.1",
     "ava": "^3.15",
     "backstopjs": "^5.4",
     "breakpoint-sass": "^2.7.1",
@@ -83,6 +83,7 @@
     "eleventy-plugin-nesting-toc": "^1.3",
     "emoji-commit-helpers": "^0.1",
     "emoji-regex": "^8.0",
+    "eslint": "^8.4",
     "eslint-config-developit": "^1.2",
     "eslint-config-google": "^0.14",
     "eslint-config-prettier": "^6.15",
@@ -90,7 +91,6 @@
     "eslint-plugin-import": "^2.25",
     "eslint-plugin-prettier": "^3.4",
     "eslint-plugin-spellcheck": "^0.0",
-    "eslint": "^8.4",
     "esm": "^3.2",
     "express": "^4.17",
     "firebase-tools": "^9.23.1",
@@ -98,9 +98,10 @@
     "fs-extra": "^8.1",
     "fuse.js": "^3.4",
     "glob": "^7.2",
-    "husky": "^3.0",
+    "husky": "^7.0.4",
     "inquirer-autocomplete-prompt": "^1.4",
     "js-yaml": "^3.14",
+    "lint-staged": "^12.1.5",
     "lodash.clonedeep": "^4.5",
     "lodash.get": "^4.4",
     "lodash.kebabcase": "^4.1",
@@ -110,23 +111,23 @@
     "posthtml-external-link": "^0.1",
     "posthtml-match-helper": "^1.0",
     "prettier": "^1.18",
+    "remark": "^14.0",
     "remark-cli": "^8.0",
     "remark-frontmatter": "^2.0",
-    "remark-lint-prohibited-strings": "^1.5",
     "remark-lint": "^7.0",
-    "remark": "^14.0",
+    "remark-lint-prohibited-strings": "^1.5",
     "replaceall": "^0.1",
     "sanitize-html": "^2.6.1",
-    "sass-toolkit": "^2.10.2",
     "sass": "^1.43",
+    "sass-toolkit": "^2.10.2",
     "sinon": "^7.5",
     "unified-lint-rule": "^1.0",
     "unist-util-find": "^1.0",
     "unist-util-parents": "^1.0",
     "unist-util-visit": "^2.0",
-    "vite-plugin-eleventy": "0.1.0",
+    "vite": "^2.7.10",
+    "vite-plugin-eleventy": "0.2.0",
     "vite-plugin-posthtml": "0.0.3",
-    "vite": "^2.7",
     "yaml-unist-parser": "^1.3"
   },
   "dependencies": {
@@ -151,7 +152,7 @@
   },
   "private": true,
   "volta": {
-    "node": "16.13.1"
+    "node": "14.18.2"
   },
   "lint-staged": {
     "(functions|site|lib|vite.config.js|ava.config.cjs)": "eslint --cache --fix",
