--- a/package.json
+++ b/package.json
@@ -99,12 +99,14 @@
     "fuse.js": "^3.4",
     "glob": "^7.2",
     "husky": "^7.0.4",
+    "image-size": "^1.0.0",
     "inquirer-autocomplete-prompt": "^1.4",
     "js-yaml": "^3.14",
     "lint-staged": "^12.1.5",
     "lodash.clonedeep": "^4.5",
     "lodash.get": "^4.4",
     "lodash.kebabcase": "^4.1",
+    "node-fetch": "^2.6",
     "npm-run-all": "^4.1",
     "nyc": "^14.1",
     "patch-package": "^6.4",
