--- a/package.json
+++ b/package.json
@@ -144,13 +144,15 @@
     "service-worker-i18n-redirect": "^1.0.0",
     "service-worker-includes": "^1.0.1",
     "vite-plugin-pwa": "^0.11.11",
-    "workbox-broadcast-update": "^5.1",
-    "workbox-cacheable-response": "^5.1",
-    "workbox-expiration": "^5.1",
-    "workbox-google-analytics": "^5.1",
-    "workbox-precaching": "^5.1",
-    "workbox-routing": "^5.1",
-    "workbox-strategies": "^5.1"
+    "workbox-broadcast-update": "^6.4.2",
+    "workbox-cacheable-response": "^6.4",
+    "workbox-expiration": "^6.4",
+    "workbox-google-analytics": "^6.4",
+    "workbox-navigation-preload": "^6.4.2",
+    "workbox-precaching": "^6.4",
+    "workbox-recipes": "^6.4",
+    "workbox-routing": "^6.4",
+    "workbox-strategies": "^6.4"
   },
   "private": true,
   "volta": {
